objects/Rating__c.object
<CustomObject>
    <fields>
        <fullName>Rating_Out_of_5__c</fullName>
        <label>Rating Out of 5</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Ratings</relationshipLabel>
        <relationshipName>Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Rating</label>
    <nameField>
        <label>Ratings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>